[package]
name = "journal"
version = "0.1.0"
edition = "2021"
authors = [
    "Nathan Fox <nchristopherfox@gmail.com>",
]
rust-version = "1.58.1"
description = "A small journal CLI program to write and retrieve journal entries"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
